<resources xmlns:tools="http://schemas.android.com/tools">
   <string name="cadpage_alert">Cadpage Alert!</string>
   <string name="app_name">Cadpage</string>
   <string name="call_history">Call History:</string>
   <string name="new_text_at">New Call Received at %s</string>
   <string name="src_text_at">%1$s call at %2$s</string>
   <string name="mms_subject">Subject:</string>
   <string name="apt_label">Apt:</string>
   <string name="cross_label">"X:</string>
   <string name="map_label">Map:</string>
   <string name="box_label">Box:</string>
   <string name="units_label">Units:</string>
   <string name="name_label">Name:</string>
   <string name="phone_label">Phone:</string>
   <string name="channel_label">Channel:</string>
   <string name="call_id_label">CID:</string>
   <string name="cadperm_title">Receive CAD pages</string>
   <string name="cadperm_desc">
   Allows application to receive CAD Pages containing information about 
   emergency response calls.  Malicious applications could use this to 
   access personal information connected with these calls</string>
   <string name="perm_phone_info_for_email">
   If we know your phone number, we can better identify subscription problems
   or problems with direct paging vendors.  Granting this permission is not required.
   If you do not do it, we will do the best we can without this information.    
   </string>
   <string name="perm_acct_info_for_auto_recalc">
   We are about to perform an automatic recalculation of your subscription status.  We
   need to know who you are so can find any subscription information we have associated
   with you.
   </string>
   <string name="perm_acct_info_for_manual_recalc">
   We need to know who you are so can find any subscription information we have associated
   with you.
   </string>
   <string name="perm_acct_info_for_register_direct_opt">
   The vendor you are trying to register with may need information about who you are to
   help identify your account on their system.
   </string>
  <string name="perm_acct_info_for_register_direct_req">
   The vendor you are trying to register with requires information about who you are to
   help identify your account on their system.
   </string>
   <string name="perm_user_sound_override">
   You are asking Cadpage to use a user selectable ringtone, which may be located on your
   external SD card.
   </string>
  <string name="perm_grant_acct_access">
    You are requesting Cadpage access to your email account information.  To do
    this, we will need to identify your Google email accounts.
  </string>
   <string name="settings">Settings</string>
   <string name="network_err_title">Network Error</string>
   <string name="network_err_not_connected">This action requires network access</string>
   <string name="network_err_roaming">This action is not advised on roaming network</string>
   <string name="button_disabled">Disabled</string>
   <string name="button_view">View</string>
   <string name="button_view_mms">View MMS</string>
   <string name="button_close">Close</string>
   <string name="pref_config_title">Cadpage Configuration</string>
   <string name="pref_other_title">Other</string>
   <string name="pref_enabled_title">Enable Cadpage</string>
   <string name="pref_enabled_summaryon">Cadpage is enabled</string>
   <string name="pref_enabled_summaryoff">Cadpage is disabled</string>
   <string name="pref_enable_msg_type_title">Message type processed</string>
   <string name="pref_enable_msg_type_summary">Cadpage will process\n%%s</string>
   <string name="pref_mms_timeout_title">MMS download timeout</string>
   <string name="pref_mms_timeout_summary">MMS content download time limit\nCur value:%%s min</string>
   <string name="pref_about_title">About</string>
   <string name="pref_about_summary">About Cadpage</string>
   <string name="pref_about_text">
       By Derrick Bennett and Ken Corbin supported by Jean Goul, based on Code by : Adam K (SMS Popup Application)\n
       Swedish translation by Roger Ehrstedt\n
   </string>
   <string name="pref_faq_title">FAQ</string>
   <string name="pref_faq_summary">Frequently Asked Questions</string>
   <string name="pref_faq_url">http://www.Cadpage.org/faq</string>
   <string name="pref_releasenotes_title">What\'s New?</string>
   <string name="pref_releasenotes_summary">See what\'s new in this version</string>
   <string name="pref_releasenotes_diagtitle">New in this version</string>
   <string name="pref_review_title">Write a Cadpage Review</string>
   <string name="pref_review_summary">Press \"Your Review\"</string>
   <string name="pref_review_url">market://details?id=net.anei.cadpage</string>
   <string name="pref_cadpage_active911_title">Cadpage and Active911 apps</string>
   <string name="pref_cadpage_active911_summary">How to run Cadpage and Active911 on the same device</string>
   <string name="pref_cadpage_active911_url" tools:ignore="MissingTranslation">http://www.cadpage.org/faq/cadpage-and-active911</string>
   <string name="pref_active911_parsers_url" tools:ignore="MissingTranslation">http://www.cadpage.org/faq/cadpage-and-active911-issue</string>
   <string name="pref_popup_control">Alarm Popup Control</string>
   <string name="pref_additional_title">Additional Settings</string>
   <string name="pref_additional_summary">Additional Cadpage configuration</string>
   <string name="pref_notif_timeout_title">Alert Duration</string>
   <string name="pref_notif_timeout_summary">Alert notification will stop after this time.  Cur value: %%s</string>
   <string name="pref_timeout_title">Screen Timeout</string>
   <string name="pref_timeout_summary">The screen stay on for this time.  Cur value: %%s</string>
   <string name="pref_dimscreen_title">Dim Popup Screen</string>
   <string name="pref_dimscreen_summaryon">Popup screen will be dim (saves battery)</string>
   <string name="pref_dimscreen_summaryoff">Popup screen will be bright</string>
   <string name="pref_show_personal_title">Display Personal Info</string>
   <string name="pref_show_personal_summaryon">Caller Name/Phone will be displayed</string>
   <string name="pref_show_personal_summaryoff">Caller Name/Phone will not be displayed</string>
   <string name="pref_popup_enabled_title">Show Popup</string>
   <string name="pref_popup_enabled_summaryon">Alarm will display popup window</string>
   <string name="pref_popup_enabled_summaryoff">Alarm will not display popup window</string>
   <string name="pref_noShowInCall_title">Restrict In Call Popup</string>
   <string name="pref_noShowInCall_summaryon">Popup window will not show when call in progress</string>
   <string name="pref_noShowInCall_summaryoff">Popup window will show when call in progress</string>
   <string name="pref_email_title">E-mail the Developer</string>
   <string name="pref_email_summary">E-mail comments or bugs to the developer</string>
   <string name="pref_notif_title">Notification Settings</string>
   <string name="pref_notif_summary">Notification configuration</string>
   <string name="pref_vibrate_category_title">Vibrate Configuration</string>
   <string name="pref_flashled_category_title">LED Configuration</string>
  <string name="pref_notif_config_title">Configure Cadpage Notifications</string>
  <string name="pref_notif_config_summary">Configure Cadpage notification details</string>
   <string name="pref_notif_enabled_title">Enable Notifications</string>
   <string name="pref_notif_enabled_summaryon">Notifications are enabled</string>
   <string name="pref_notif_enabled_summaryoff">Notifications are disabled</string>
   <string name="pref_notif_test_title">Test Notification</string>
   <string name="pref_notif_test_summary">Test out your notification</string>
   <string name="pref_notif_test_message">Testing your notification now!</string>
   <string name="pref_notif_sound_title">Notification Sound</string>
   <string name="pref_notif_sound_summary">This sound will play when a message is received</string>
   <string name="pref_notif_delay_title">Alert Delay</string>
   <string name="pref_notif_delay_summary">Cadpage alert will be delayed by: Cur value: %%s </string>
   <string name="pref_notif_delay_dialogTitle">Alert delay period (seconds)</string>
   <string name="pref_vibrate_title">Vibrate</string>
   <string name="pref_vibrate_summaryon">Vibrate is on</string>
   <string name="pref_vibrate_summaryoff">Vibrate is off</string>
   <string name="pref_vibrate_pattern_title">Vibrate Pattern</string>
   <string name="pref_vibrate_pattern_summary">Set the vibration pattern.  Cur value: %%s</string>
   <string name="pref_vibrate_pattern_ok">Custom vibrate pattern set</string>
   <string name="pref_vibrate_pattern_bad">Custom vibrate pattern invalid</string>
   <string name="pref_vibrate_pattern_help">Enter a custom vibrate pattern, in the format:\nmillisOff, millisOn, etc.\n\nFor example:\n0,1000\n0,500,200,500,200,500</string>
   <string name="pref_custom_val">custom</string>
   <string name="pref_flashled_title">Blink LED</string>
   <string name="pref_flashled_summaryon">Blink LED when a message is received</string>
   <string name="pref_flashled_summaryoff">Do not blink LED when a message is received</string>
   <string name="pref_flashled_color_title">LED Color</string>
   <string name="pref_flashled_color_summary">The color of the LED.  Cur value: %%s</string>
      <string name="pref_flashled_color_custom_dialog_red">Red:</string>
   <string name="pref_flashled_color_custom_dialog_green">Green:</string>
   <string name="pref_flashled_color_custom_dialog_blue">Blue:</string>
   <string name="pref_flashled_color_custom_dialog_preview">Preview:</string>
   <string name="pref_flashled_color_custom_set">Custom LED color set</string>
   <string name="pref_flashled_pattern_title">LED Blink Rate</string>
   <string name="pref_flashled_pattern_summary">Set the speed the LED blinks.  Cur value: %%s</string>
   <string name="pref_flashled_pattern_ok">Custom LED blink rate set</string>
   <string name="pref_flashled_pattern_bad">Custom LED blink rate is invalid</string>
   <string name="pref_flashled_pattern_help">Enter the time in milliseconds to turn the LED on and off</string>
   <string name="pref_flashled_pattern_help_on">Time on:</string>
   <string name="pref_flashled_pattern_help_off">Time off:</string>
   <string name="pref_notif_repeat_interval_title">Repeat Alert Interval</string>
   <string name="pref_notif_repeat_interval_summary">Alert will repeat at this interval. Cur value: %%s </string>
   <string name="pref_notif_repeat_interval_dialogTitle">Repeat Interval</string>
  <string name="pref_notif_default_title">Default Notifications</string>
  <string name="pref_notif_override_title">Override Mute and Volume Control</string>
  <string name="pref_notif_override_summaryon">Alert sound will always play at full volume</string>
  <string name="pref_notif_override_summaryoff">Alert sound will follow normal mute and volume controls</string>
  <string name="pref_notif_override_volume_title">Reassert volume control</string>
  <string name="pref_notif_override_volume_summaryon">Alert sound will follow media player volume control</string>
  <string name="pref_notif_override_volume_summaryoff">Alert sound will always play at full volume</string>
  <string name="pref_notif_override_sound_title">Play Cadpage Alert Tones</string>
  <string name="exit">Exit</string>
  <string name="markallopened_text">Mark All Read</string>
  <string name="clearall_text">Clear All</string>
  <string name="pref_disclaimer_title">Disclaimer</string>
  <string name="pref_disclaimer_summary">View Disclaimer regarding Cadpage use.</string>
  <string name="pref_disclaimer_url">http://www.cadpage.org/disclaimer</string>
  <string name="pref_privacy_policy_title">Privacy Policy</string>
  <string name="pref_privacy_policy_summary">View Cadpage privacy policy.</string>
  <string name="pref_privacy_policy_url">http://www.cadpage.org/privacy-policy</string>
</resources>