<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <Preference
    app:title="@string/pref_disclaimer_title"
    app:summary="@string/pref_disclaimer_summary">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/pref_disclaimer_url"/>
  </Preference>
  <Preference
    app:title="@string/pref_privacy_policy_title"
    app:summary="@string/pref_privacy_policy_summary">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/pref_privacy_policy_url"/>
  </Preference>

  <Preference
    app:title="@string/pref_faq_title"
    app:summary="@string/pref_faq_summary">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/pref_faq_url" />
  </Preference>

  <net.anei.cadpage.preferences.DialogPreference
    app:negativeButtonText="@null"
    app:key="@string/pref_about_key"
    app:title="@string/pref_about_title"
    app:dialogIcon="@drawable/ic_launcher"
    app:summary="@string/pref_about_summary"
    app:dialogTitle="@string/app_name"/>

  <net.anei.cadpage.preferences.DialogPreference
    app:negativeButtonText="@null"
    app:key="@string/pref_releasenotes_key"
    app:title="@string/pref_releasenotes_title"
    app:summary="@string/pref_releasenotes_summary"
    app:dialogIcon="@drawable/ic_launcher"
    app:dialogTitle="@string/pref_releasenotes_diagtitle"
    app:dialogMessage="@string/release_text"/>

  <Preference
    app:title="@string/pref_cadpage_active911_title"
    app:summary="@string/pref_cadpage_active911_summary">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/pref_cadpage_active911_url" />
  </Preference>

</PreferenceScreen>