<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/settings_item"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

  <item android:id="@+id/markallopened_item"
        android:title="@string/markallopened_text"
        android:icon="@drawable/ic_menu_checked"
        app:showAsAction="never"/>

  <item android:id="@+id/clearall_item"
        android:title="@string/clearall_text"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="never"/>

  <item android:id="@+id/exit_item"
        android:title="@string/exit"
        android:icon="@drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"/>
</menu>